--- a/tesla-clone/package.json
+++ b/tesla-clone/package.json
@@ -12,9 +12,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
+    "react-responsive-carousel": "^3.2.20",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0"
   },
   "scripts": {
